--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
         {{ post.excerpt }}
       </div>
 
-      <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Read Less</a>
+      <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Read More or Less</a>
     </article>
   {% endfor %}
 </div>
